410 add V4.1.0_CE_BP1_HF1 RN

--- a/zh-CN/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
+++ b/zh-CN/9.release-notes/102.community-edition-history-release/99.V4.1/98.V4.1.0.md
@@ -660,3 +660,19 @@ OceanBase 数据库 V4.1.0 推荐使用的平台工具版本如下。
 ### 注意事项
 
 OBD V2.1.0 版本开始支持将 OceanBase 数据库社区版从 V4.0.0 版本升级至 V4.1.0 版本。
+
+## V4.1.0_CE_BP1_HF1
+
+### 版本信息
+
+* 发布时间：2023 年 5 月 19 日
+* 版本号：V4.1.0_CE_BP1_HF1
+
+### 发版目的
+
+本次发版主要是 BUG 修复，提升版本稳定性。
+
+### 缺陷修复
+
+* 修复列间等值编码异常导致的数据异常问题。
+* 修复 `TRUNCATE TABLE` 场景下，`tablet_id` 变化可能导致的数据写入失败问题。
