--- a/en-US/5.data-migration/9.data-migration-between-oceanbase-databases/1.migrate-data-from-mysql-tenant-to-mysql-tenant.md
+++ b/en-US/5.data-migration/9.data-migration-between-oceanbase-databases/1.migrate-data-from-mysql-tenant-to-mysql-tenant.md
@@ -6,13 +6,13 @@ This topic describes how to use OBLOADER & OBDUMPER to migrate data from a MySQL
 
 OceanBase Database provides the data export tool OBDUMPER and the data import tool OBLOADER. 
 
-* OBDUMPER is a client data export tool developed in Java. You can use it to export data and the DDL statements of objects in OceanBase Database to files. For more information about OBDUMPER, see [User Guide (OBDUMPER)](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142215). 
+* OBDUMPER is a client data export tool developed in Java. You can use it to export data and the DDL statements of objects in OceanBase Database to files. For more information about OBDUMPER, see [User Guide (OBDUMPER)](https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860074). 
 
-* OBLOADER is a client data import tool developed in Java. OBLOADER provides extensive command-line options that allow you to import definitions and data to OceanBase Database in many complex scenarios. For more information about OBLOADER, see [User Guide (OBLOADER)](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142221). 
+* OBLOADER is a client data import tool developed in Java. OBLOADER provides extensive command-line options that allow you to import definitions and data to OceanBase Database in many complex scenarios. For more information about OBLOADER, see [User Guide (OBLOADER)](https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860068). 
 
 ## Procedure
 
-1. Prepare the running environment for OBDUMPER and OBLOADER. For more information, see [Prepare the environment](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142213) and [Download tools](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142214). 
+1. Prepare the running environment for OBDUMPER and OBLOADER. For more information, see [Prepare the environment](https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860066) and [Download tools](https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860067). 
 
 2. Create a directory to store the exported data. 
 
@@ -23,13 +23,13 @@ OceanBase Database provides the data export tool OBDUMPER and the data import to
    $./obdumper -h <host IP address> -P <port number> -u <user> -p <password> [--sys-user <username in the sys tenant> --sys-password <password of the specified user in the sys tenant>] -c <cluster name> -t <tenant> -D <schema name> [--ddl] [--csv|--sql] [--all|--table 'table name'] -f<data file or directory>
    ```
 
-<main id="notice" type='explain'>
+   <main id="notice" type='explain'>
     <h4>Note</h4>
     <ul>
     <li>When you use the host address and port number of a physical node to export data, you do not need to specify the <code>-c</code> option. </li>
-    <li>For more information about OBDUMPER command-line options, see <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142216">Command-line options</a>. </li>
+    <li>For more information about OBDUMPER command-line options, see <a href="https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860075">Command-line options</a>. </li>
     </ul>
-  </main>
+   </main>
 
 4. Import a table schema and data. 
 
@@ -38,13 +38,13 @@ OceanBase Database provides the data export tool OBDUMPER and the data import to
    $./obloader -h <host IP address> -P <port number> -u <username> -p <password> --sys-user <root or proxyro user in the sys tenant> --sys-password <password of the user in the sys tenant> -c <cluster> -t <tenant> -D <schema name> [--ddl] [--csv|--sql] [--all|--table 'table name'] -f<data file or directory>
    ```
 
-<main id="notice" type='explain'>
+   <main id="notice" type='explain'>
     <h4>Note</h4>
     <ul>
     <li>When you use the host address and port number of a physical node to import data, you do not need to specify the <code>-c</code> option. </li>
-    <li>For more information about OBLOADER command-line options, see <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142221">Command-line options</a>. </li>
+    <li>For more information about OBLOADER command-line options, see <a href="https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860069">Command-line options</a>. </li>
     </ul>
-  </main>
+   </main>
 
 ## Examples
 
