--- a/en-US/5.data-migration/9.data-migration-between-oceanbase-databases/2.migrate-data-from-mysql-tenant-to-oracle-tenant.md
+++ b/en-US/5.data-migration/9.data-migration-between-oceanbase-databases/2.migrate-data-from-mysql-tenant-to-oracle-tenant.md
@@ -6,13 +6,13 @@ This topic describes how to use OBLOADER & OBDUMPER to migrate data from a MySQL
 
 OceanBase Database provides the data export tool OBDUMPER and the data import tool OBLOADER. 
 
-* OBDUMPER is a client data export tool developed in Java. You can use it to export data and the DDL statements of objects in OceanBase Database to files. For more information about OBDUMPER, see [User Guide (OBDUMPER)](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142215). 
+* OBDUMPER is a client data export tool developed in Java. You can use it to export data and the DDL statements of objects in OceanBase Database to files. For more information about OBDUMPER, see [User Guide (OBDUMPER)](https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860074). 
 
-* OBLOADER is a client data import tool developed in Java. OBLOADER provides extensive command-line options that allow you to import definitions and data to OceanBase Database in many complex scenarios. For more information about OBLOADER, see [User Guide (OBLOADER)](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142221). 
+* OBLOADER is a client data import tool developed in Java. OBLOADER provides extensive command-line options that allow you to import definitions and data to OceanBase Database in many complex scenarios. For more information about OBLOADER, see [User Guide (OBLOADER)](https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860068). 
 
 ## Procedure
 
-1. Prepare the running environment for OBDUMPER and OBLOADER. For more information, see [Prepare the environment](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142213) and [Download tools](https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142214). 
+1. Prepare the running environment for OBDUMPER and OBLOADER. For more information, see [Prepare the environment](https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860066) and [Download tools](https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860067). 
 
 2. Create a directory to store the exported data. 
 
@@ -23,7 +23,7 @@ OceanBase Database provides the data export tool OBDUMPER and the data import to
    $./obdumper -h <host IP address> -P <port number> -u <user> -p <password> [--sys-user <username in the sys tenant> --sys-password <password of the specified user in the sys tenant>] -c <cluster name> -t <tenant> -D <schema name> [--ddl] [--csv|--sql] [--all|--table 'table name'] -f<data file or directory>
    ```
 
-<main id="notice" type='explain'>
+   <main id="notice" type='explain'>
 
     <h4>Note</h4>
     
@@ -31,7 +31,7 @@ OceanBase Database provides the data export tool OBDUMPER and the data import to
     
     <li>When you use the host address and port number of a physical node to export data, you do not need to specify the <code>-c</code> option. </li>
     
-    <li>For more information about OBDUMPER command-line options, see <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142216">Command-line options</a>. </li>
+    <li>For more information about OBDUMPER command-line options, see <a href="https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860075">Command-line options</a>. </li>
     
     </ul>
 
@@ -44,7 +44,7 @@ OceanBase Database provides the data export tool OBDUMPER and the data import to
    $./obloader -h <host IP address> -P <port number> -u <username> -p <password> --sys-user <root or proxyro user in the sys tenant> --sys-password <password of the user in the sys tenant> -c <cluster> -t <tenant> -D <schema name> [--ddl] [--csv|--sql] [--all|--table 'table name'] -f<data file or directory>
    ```
 
-<main id="notice" type='explain'>
+   <main id="notice" type='explain'>
 
     <h4>Note</h4>
     
@@ -52,7 +52,7 @@ OceanBase Database provides the data export tool OBDUMPER and the data import to
     
     <li>When you use the host address and port number of a physical node to import data, you do not need to specify the <code>-c</code> option. </li>
     
-    <li>For more information about OBLOADER command-line options, see <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-cn-10000000001142222">Command-line options</a>. </li>
+    <li>For more information about OBLOADER command-line options, see <a href="https://en.oceanbase.com/docs/enterprise-oceanbase-dumper-loader-en-10000000000860069">Command-line options</a>. </li>
     
     </ul>
 
@@ -83,11 +83,11 @@ When you use OBDUMPER and OBLOADER to migrate a table schema, you must specify t
 
 <main id="notice" type='explain'>
 
-    <h4>Note</h4>
+   <h4>Note</h4>
     
-    <p>The <code>--sys-user</code> option is used to connect to a user with specific privileges in the <code>sys</code> tenant. If you do not specify the <code>--sys-user</code> option, <code>--sys-user root</code> is used by default. </p>
+   <p>The <code>--sys-user</code> option is used to connect to a user with specific privileges in the <code>sys</code> tenant. If you do not specify the <code>--sys-user</code> option, <code>--sys-user root</code> is used by default. </p>
 
-  </main>
+</main>
 
 #### Export DDL definition files
 
@@ -210,36 +210,21 @@ Scenario: Export all supported object definition statements from the `test_data`
 Scenario: Import, to the `obloader_user01` schema of the `oracle001` tenant in the `test4000` cluster, all supported object definitions that are exported from the `test_data` schema of the `mysql001` tenant in the `test4000` cluster to the `/home/admin/test_migrate_data/ddl_data` directory. 
 
 <main id="notice" type='notice'>
-
-    <h4>Notice</h4>
-    
-    <p>DDL files exported from a MySQL tenant do not meet the syntax requirements of an Oracle tenant. Therefore, before you import the DDL files to the Oracle tenant, you must first modify the files so that the files meet the syntax requirements of the Oracle tenant. </p>
-    
-    <p>For example, for a DDL file exported from the <code>mysql001</code> tenant, make the following modifications:</p>
-    
-    <ul>
-    
-    <li>Remove the <code>if not exists</code> keyword and single quotation marks. </li>
-    
-    <li>Convert the data types to those supported in Oracle mode:
-    
-    <ul>
-    
-    <li>Convert <code>int(11)</code> to <code>number(11)</code>. </li>
-    
-    <li>Convert <code>varchar(50)</code> to <code>varchar2(50)</code>. </li>
-    
-    </ul>
-    
-    </li>
-    
-    <li>Remove the default collation and character set parameters <code>default charset=utf8mb4</code> and <code>default collate=utf8mb4_general_ci</code>. </li>
-    
-    </ul>
-    
-    <p>For more information about the data types in Oracle mode, see <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000886657">Overview of built-in data types</a>. </p>
-
-  </main>
+   <h4>Notice</h4>
+   <p>DDL files exported from a MySQL tenant do not meet the syntax requirements of an Oracle tenant. Therefore, before you import the DDL files to the Oracle tenant, you must first modify the files so that the files meet the syntax requirements of the Oracle tenant. </p>
+   <p>For example, for a DDL file exported from the <code>mysql001</code> tenant, make the following modifications:</p>
+   <ul>
+   <li>Remove the <code>if not exists</code> keyword and single quotation marks. </li>
+   <li>Convert the data types to those supported in Oracle mode:
+   <ul>
+   <li>Convert <code>int(11)</code> to <code>number(11)</code>. </li>
+   <li>Convert <code>varchar(50)</code> to <code>varchar2(50)</code>. </li>
+   </ul>
+   </li>
+   <li>Remove the default collation and character set parameters <code>default charset=utf8mb4</code> and <code>default collate=utf8mb4_general_ci</code>. </li>
+   </ul>
+   <!--<p>For more information about the data types in Oracle mode, see <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000886657">Overview of built-in data types</a>. </p>-->
+</main>
 
 * Sample statement: 
 
@@ -437,19 +422,19 @@ Scenario: Import, to the `OBLOADER_USER01` schema of the `oracle001` tenant in t
 
 <main id="notice" type='notice'>
 
-    <h4>Notice</h4>
+   <h4>Notice</h4>
     
-    <ul>
+   <ul>
     
-    <li>Change the schema name of the <code>mysql001</code> tenant in the <code>home/admin/test_migrate_data/csv_data/data/</code> directory from <code>test_data</code> to <code>OBLOADER_USER01</code>.<code></code> </li>
+   <li>Change the schema name of the <code>mysql001</code> tenant in the <code>home/admin/test_migrate_data/csv_data/data/</code> directory from <code>test_data</code> to <code>OBLOADER_USER01</code>.<code></code> </li>
     
-    <li>Convert the letters in the table name in the exported CSV file name to uppercase. </li>
+   <li>Convert the letters in the table name in the exported CSV file name to uppercase. </li>
     
-    </ul>
+   </ul>
     
-    <p>Syntax:</p>
+   <p>Syntax:</p>
     
-    <p><code></code><code>bash [root@xxx /home/admin/test_migrate_data/csv_data/data]# mv test_data OBLOADER_USER01 [root@xxx /home/admin/test_migrate_data/csv_data/data]# cd OBLOADER_USER01/TABLE [root@xxx /home/admin/test_migrate_data/csv_data/data/OBLOADER_USER01/TABLE]# ls test_tbl1.1.0.csv test_tbl2.1.0.csv [root@xxx /home/admin/test_migrate_data/csv_data/data/OBLOADER_USER01/TABLE]# mv test_tbl1.1.0.csv TEST_TBL1.1.0.csv [root@xxx /home/admin/test_migrate_data/csv_data/data/OBLOADER_USER01/TABLE]# mv test_tbl2.1.0.csv TEST_TBL2.1.0.csv &lt;code>&lt;/code></code></p>
+   <p><code></code><code>bash [root@xxx /home/admin/test_migrate_data/csv_data/data]# mv test_data OBLOADER_USER01 [root@xxx /home/admin/test_migrate_data/csv_data/data]# cd OBLOADER_USER01/TABLE [root@xxx /home/admin/test_migrate_data/csv_data/data/OBLOADER_USER01/TABLE]# ls test_tbl1.1.0.csv test_tbl2.1.0.csv [root@xxx /home/admin/test_migrate_data/csv_data/data/OBLOADER_USER01/TABLE]# mv test_tbl1.1.0.csv TEST_TBL1.1.0.csv [root@xxx /home/admin/test_migrate_data/csv_data/data/OBLOADER_USER01/TABLE]# mv test_tbl2.1.0.csv TEST_TBL2.1.0.csv &lt;code>&lt;/code></code></p>
 
   </main>
 
