--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/11.DBMS_OUTPUT/1.dbms_output-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/11.DBMS_OUTPUT/1.dbms_output-overview.md
@@ -73,13 +73,13 @@ DBMS_OUTPUT 子程序概览
 
 |                         **子程序**                          |     **描述**      |
 |----------------------------------------------------------|-----------------|
-| [DISABLE](../11.DBMS_OUTPUT/2.DISABLE.md)   | 禁用消息输出。         |
-| [ENABLE](../11.DBMS_OUTPUT/3.ENABLE.md)    | 开启消息输出。         |
-| [GET_LINE](../11.DBMS_OUTPUT/4.GET_LINE.md)  | 从缓冲区中检索一行数据。    |
-| [GET_LINES](../11.DBMS_OUTPUT/5.GET_LINES.md) | 从缓冲区检索一组行数据。    |
-| [NEW_LINE](../11.DBMS_OUTPUT/6.NEW_LINE.md)  | 终止用 `PUT` 创建的行。 |
-| [PUT](../11.DBMS_OUTPUT/7.PUT.md)       | 将部分行数据放入缓冲区。    |
-| [PUT_LINE](../11.DBMS_OUTPUT/8.PUT_LINE.md)  | 将单行数据放入缓冲区。     |
+| [DISABLE](2.disable-oracle.md)   | 禁用消息输出。         |
+| [ENABLE](3.enable-oracle.md)    | 开启消息输出。         |
+| [GET_LINE](4.get-line-oracle.md)  | 从缓冲区中检索一行数据。    |
+| [GET_LINES](5.get-lines-oracle.md) | 从缓冲区检索一组行数据。    |
+| [NEW_LINE](6.new-line-oracle.md)  | 终止用 `PUT` 创建的行。 |
+| [PUT](7.put-oracle.md)       | 将部分行数据放入缓冲区。    |
+| [PUT_LINE](8.put-line-oracle.md)  | 将单行数据放入缓冲区。     |
 
 
 
