--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/12.DBMS_PLAN_CACHE/1.dbms_plan_cache-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/12.DBMS_PLAN_CACHE/1.dbms_plan_cache-overview.md
@@ -21,6 +21,6 @@ DBMS_PLAN_CACHE 子程序概览
 
 |                       **子程序**                        |         **描述**          |
 |------------------------------------------------------|-------------------------|
-| [PURGE](../12.DBMS_PLAN_CACHE/2.PURGE.md) | 从 Plan Cache 中移除指定 SQL。 |
+| [PURGE](2.purge-oracle.md) | 从 Plan Cache 中移除指定 SQL。 |
 
 
