--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/3.DBMS_APPLICATION_INFO/1.dbms_application_info-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/3.DBMS_APPLICATION_INFO/1.dbms_application_info-overview.md
@@ -20,8 +20,8 @@
 
 |     子程序     |       描述     |
 |---------------|---------------|
-| [READ_CLIENT_INFO](2.READ_CLIENT_INFO.md)     | 读取当前会话的client_info 字段的值。         |
-| [READ_MODULE](3.READ_MODULE.md)               | 读取当前会话的的模块和操作字段的值。          |
-| [SET_ACTION](4.SET_ACTION.md)                 | 设置当前模块中当前操作的名称。                |
-| [SET_CLIENT_INFO](5.SET_CLIENT_INFO.md) | 设置客户端应用程序的附加信息。 |
-| [SET_MODULE](6.SET_MODULE.md)                 | 将当前正在运行的模块的名称设置为新模块。       |
+| [READ_CLIENT_INFO](2.read-client-info-oracle.md)     | 读取当前会话的client_info 字段的值。         |
+| [READ_MODULE](3.read-module-oracle.md)               | 读取当前会话的的模块和操作字段的值。          |
+| [SET_ACTION](4.set-action-oracle.md)                 | 设置当前模块中当前操作的名称。                |
+| [SET_CLIENT_INFO](5.set-client-info-oracle.md) | 设置客户端应用程序的附加信息。 |
+| [SET_MODULE](6.set-module-oracle.md)                 | 将当前正在运行的模块的名称设置为新模块。       |
