--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/4.DBMS_CRYPTO/1.dbms_crypto-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/4.DBMS_CRYPTO/1.dbms_crypto-overview.md
@@ -115,9 +115,9 @@ DBMS_CRYPTO 子程序概览
 
 |                        **子程序**                         |                     **描述**                      |
 |--------------------------------------------------------|-------------------------------------------------|
-| [ENCRYPT](../4.DBMS_CRYPTO/2.ENCRYPT.md) | 使用具有用户提供的密钥和可选 IV （初始化向量）的流或分组密码对 `RAW` 数据进行加密。 |
-| [DECRYPT](../4.DBMS_CRYPTO/3.DECRYPT.md) | 使用具有用户提供的密钥和可选 IV（初始化向量）的流或分组密码解密 `RAW` 数据。     |
-| [HASH](../4.DBMS_CRYPTO/4.HASH.md)    | 将所支持的加密哈希算法之一（MD4、MD5、SHA-1 或 SHA-2）应用于数据。      |
+| [ENCRYPT](2.encrypt-oracle.md) | 使用具有用户提供的密钥和可选 IV （初始化向量）的流或分组密码对 `RAW` 数据进行加密。 |
+| [DECRYPT](3.decrypt-oracle.md) | 使用具有用户提供的密钥和可选 IV（初始化向量）的流或分组密码解密 `RAW` 数据。     |
+| [HASH](4.hash-oracle.md)    | 将所支持的加密哈希算法之一（MD4、MD5、SHA-1 或 SHA-2）应用于数据。      |
 
 
 
