--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/5.DBMS_DEBUG/1.dbms_debug-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/5.DBMS_DEBUG/1.dbms_debug-overview.md
@@ -64,25 +64,25 @@ DBMS_DEBUG 子程序概览
 
 |                               **子程序**                                |         **描述**          |
 |----------------------------------------------------------------------|-------------------------|
-| [ATTACH_SESSION](../5.DBMS_DEBUG/2.ATTACH_SESSION.md)        | 将目标 DebugID 通知给调试会话。    |
-| [CONTINUE](../5.DBMS_DEBUG/3.CONTINUE.md)              | 继续执行目标程序。               |
-| [DEBUG_ON](../5.DBMS_DEBUG/4.DEBUG_ON.md)              | 打开调试模式。                 |
-| [DEBUG_OFF](../5.DBMS_DEBUG/5.DEBUG_OFF.md)             | 关闭调试模式。                 |
-| [DETACH_SESSION](../5.DBMS_DEBUG/6.DETACH_SESSION.md)        | 停止调试目标程序。               |
-| [DELETE_BREAKPOINT](../5.DBMS_DEBUG/7.DELETE_BREAKPOINT.md)     | 删除断点。                   |
-| [DISABLE_BREAKPOINT](../5.DBMS_DEBUG/8.DISABLE_BREAKPOINT.md)    | 禁用断点。                   |
-| [ENABLE_BREAKPOINT](../5.DBMS_DEBUG/9.ENABLE_BREAKPOINT.md)     | 激活现有断点。                 |
-| [GET_VALUE](../5.DBMS_DEBUG/10.GET_VALUE.md)             | 从当前运行的程序中获取值。           |
-| [GET_VALUES](../5.DBMS_DEBUG/11.GET_VALUES.md)            | 返回当前栈帧的所有变量信息。          |
-| [GET_RUNTIME_INFO](../5.DBMS_DEBUG/12.GET_RUNTIME_INFO.md)      | 返回当前程序的有关信息。            |
-| [GET_TIMEOUT_BEHAVIOUR](../5.DBMS_DEBUG/13.GET_TIMEOUT_BEHAVIOUR.md) | 返回当前超时行为。               |
-| [INITIALIZE](../5.DBMS_DEBUG/14.INITIALIZE.md)            | 在目标会话中设置 DebugID。       |
-| [PROBE_VERSION](../5.DBMS_DEBUG/15.PROBE_VERSION.md)         | 返回服务器上 DBMS_DEBUG 的版本号。 |
-| [PRINT_BACKTRACE](../5.DBMS_DEBUG/16.PRINT_BACKTRACE.md)       | 打印堆栈回溯。                 |
-| [SET_TIMEOUT](../5.DBMS_DEBUG/17.SET_TIMEOUT.md)           | 设置超时值。                  |
-| [SET_TIMEOUT_BEHAVIOUR](../5.DBMS_DEBUG/18.SET_TIMEOUT_BEHAVIOUR.md) | 告诉监视线程发生超时时如何处理目标会话。    |
-| [SET_BREAKPOINT](../5.DBMS_DEBUG/19.SET_BREAKPOINT.md)        | 在程序单元中设置断点。             |
-| [SHOW_BREAKPOINTS](../5.DBMS_DEBUG/20.SHOW_BREAKPOINTS.md)      | 返回当前断点的列表。              |
+| [ATTACH_SESSION](2.attach-session-oracle.md)        | 将目标 DebugID 通知给调试会话。    |
+| [CONTINUE](3.continue-oracle.md)              | 继续执行目标程序。               |
+| [DEBUG_ON](4.debug-on-oracle.md)              | 打开调试模式。                 |
+| [DEBUG_OFF](5.debug-off-oracle.md)             | 关闭调试模式。                 |
+| [DETACH_SESSION](6.detach-session-oracle.md)        | 停止调试目标程序。               |
+| [DELETE_BREAKPOINT](7.delete-breakpoint-oracle.md)     | 删除断点。                   |
+| [DISABLE_BREAKPOINT](8.disable-breakpoint-oracle.md)    | 禁用断点。                   |
+| [ENABLE_BREAKPOINT](9.enable-breakpoint-oracle.md)     | 激活现有断点。                 |
+| [GET_VALUE](10.get-value-oracle.md)             | 从当前运行的程序中获取值。           |
+| [GET_VALUES](11.get-values-oracle.md)            | 返回当前栈帧的所有变量信息。          |
+| [GET_RUNTIME_INFO](12.get-runtime-info-oracle.md)      | 返回当前程序的有关信息。            |
+| [GET_TIMEOUT_BEHAVIOUR](13.get-timeout-behaviour-oracle.md) | 返回当前超时行为。               |
+| [INITIALIZE](14.initialize-debug-oracle.md)            | 在目标会话中设置 DebugID。       |
+| [PROBE_VERSION](15.probe-version-oracle.md)         | 返回服务器上 DBMS_DEBUG 的版本号。 |
+| [PRINT_BACKTRACE](16.print-backtrace-oracle.md)       | 打印堆栈回溯。                 |
+| [SET_TIMEOUT](17.set-timeout-oracle.md)           | 设置超时值。                  |
+| [SET_TIMEOUT_BEHAVIOUR](18.set-timeout-behaviour-oracle.md) | 告诉监视线程发生超时时如何处理目标会话。    |
+| [SET_BREAKPOINT](19.set-breakpoint-oracle.md)        | 在程序单元中设置断点。             |
+| [SHOW_BREAKPOINTS](20.show-breakpoints-oracle.md)      | 返回当前断点的列表。              |
 
 
 
