--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/7.DBMS_JOB/1.dbms_job-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/7.DBMS_JOB/1.dbms_job-overview.md
@@ -51,15 +51,15 @@ DBMS_JOB 子程序概览
 
 |                            子程序                             |          描述          |
 |------------------------------------------------------------|----------------------|
-| [BROKEN](../7.DBMS_JOB/2.BROKEN.md)      | 禁止执行 Job。            |
-| [CHANGE](../7.DBMS_JOB/3.CHANGE.md)      | 更改与 Job 关联的用户自定义参数。  |
-| [ZONE](../7.DBMS_JOB/4.ZONE.md)        | 更改 Job 与 Zone 的从属关系。 |
-| [INTERVAL](../7.DBMS_JOB/5.INTERVAL.md)    | 改变指定 Job 的执行间隔。      |
-| [NEXT_DATE](../7.DBMS_JOB/6.NEXT_DATE.md)   | 更改指定 Job 的下一次执行时间。   |
-| [REMOVE](../7.DBMS_JOB/7.REMOVE.md)      | 从 Job 队列中删除指定的 Job。  |
-| [RUN](../7.DBMS_JOB/8.RUN.md)         | 强制运行指定的 Job。         |
-| [SUBMIT](../7.DBMS_JOB/9.SUBMIT.md)      | 向 Job 队列提交新 Job。     |
-| [USER_EXPORT](../7.DBMS_JOB/10.USER_EXPORT.md) | 生成重新创建指定 Job 的调用文本。  |
-| [WHAT](../7.DBMS_JOB/11.WHAT.md)        | 更改指定 Job 的执行内容。      |
+| [BROKEN](2.broken-oracle.md)      | 禁止执行 Job。            |
+| [CHANGE](3.change-oracle.md)      | 更改与 Job 关联的用户自定义参数。  |
+| [ZONE](4.zone-oracle.md)        | 更改 Job 与 Zone 的从属关系。 |
+| [INTERVAL](5.interval-oracle.md)    | 改变指定 Job 的执行间隔。      |
+| [NEXT_DATE](6.next-date-oracle.md)   | 更改指定 Job 的下一次执行时间。   |
+| [REMOVE](7.remove-oracle.md)      | 从 Job 队列中删除指定的 Job。  |
+| [RUN](8.run-oracle.md)         | 强制运行指定的 Job。         |
+| [SUBMIT](9.submit-oracle.md)      | 向 Job 队列提交新 Job。     |
+| [USER_EXPORT](10.user-export-oracle.md) | 生成重新创建指定 Job 的调用文本。  |
+| [WHAT](11.what-oracle.md)        | 更改指定 Job 的执行内容。      |
 
 
