--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/8.DBMS_LOB/1.dbms_lob-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/8.DBMS_LOB/1.dbms_lob-overview.md
@@ -61,21 +61,21 @@ DBMS_LOB 子程序概览
 
 |                            **子程序**                             |                  **描述**                  |
 |----------------------------------------------------------------|------------------------------------------|
-| [APPEND](../8.DBMS_LOB/2.APPEND.md)          | 将源 `LOB` 的内容附加到目标 `LOB`。                 |
-| [CLOSE](../8.DBMS_LOB/3.CLOSE.md)           | 关闭先前打开的内部或外部 `LOB`。                      |
-| [COPY](../8.DBMS_LOB/5.Copy.md)            | 将源内部 `LOB` 的全部或一部分复制到目标内部 `LOB`。         |
-| [CREATETEMPORARY](../8.DBMS_LOB/6.CREATETEMPORARY.md) | 在默认的临时表空间中创建一个临时 `BLOB` 或 `CLOB` 及对应的索引。 |
-| [FREETEMPORARY](../8.DBMS_LOB/8.FREETEMPORARY.md)   | 释放默认的临时表空间中的临时 `BLOB` 或 `CLOB`。          |
-| [ERASE](../8.DBMS_LOB/7.ERAESE.md)           | 擦除全部或部分 `LOB`。                           |
-| [GETLENGTH](../8.DBMS_LOB/9.GETLENGTH.md)       | 获取 `LOB` 值的长度。                           |
-| [ISOPEN](../8.DBMS_LOB/10.ISOPEN.md)          | 检查是否已经使用输入定位器打开了 `LOB`。                  |
-| [INSTR](../8.DBMS_LOB/11.INSTR.md)           | 返回在 `LOB` 模式中第 `n` 次发生匹配位置。              |
-| [OPEN](../8.DBMS_LOB/12.OPEN.md)            | 在指示的模式下打开 `LOB`（内部、外部或临时）。               |
-| [READ](../8.DBMS_LOB/13.READ.md)            | 从指定偏移量开始读取 `LOB` 的数据。                    |
-| [SUBSTR](../8.DBMS_LOB/14.SUBSTR.md)          | 从指定的偏移量开始返回部分 `LOB` 值。                   |
-| [TRIM](../8.DBMS_LOB/15.TRIM.md)            | 将 `LOB` 值修剪为指定的较短长度。                     |
-| [WRITE](../8.DBMS_LOB/16.WRITE.md)           | 从指定的偏移量开始将数据写入 `LOB`。                    |
-| [WRITEAPPEND](../8.DBMS_LOB/17.WRITEAPPEND.md)     | 将缓冲区写入 `LOB` 的末尾。                        |
+| [APPEND](2.append-oracle)          | 将源 `LOB` 的内容附加到目标 `LOB`。                 |
+| [CLOSE](3.close-oracle.md)           | 关闭先前打开的内部或外部 `LOB`。                      |
+| [COPY](5.copy-oracle.md)            | 将源内部 `LOB` 的全部或一部分复制到目标内部 `LOB`。         |
+| [CREATETEMPORARY](6.createtemporary-oracle.md) | 在默认的临时表空间中创建一个临时 `BLOB` 或 `CLOB` 及对应的索引。 |
+| [FREETEMPORARY](8.freetemporary-oracle.md)   | 释放默认的临时表空间中的临时 `BLOB` 或 `CLOB`。          |
+| [ERASE](7.eraese-oracle.md)           | 擦除全部或部分 `LOB`。                           |
+| [GETLENGTH](9.getlength-oracle.md)       | 获取 `LOB` 值的长度。                           |
+| [ISOPEN](10.isopen-oracle.md)          | 检查是否已经使用输入定位器打开了 `LOB`。                  |
+| [INSTR](11.instr-oracle.md)           | 返回在 `LOB` 模式中第 `n` 次发生匹配位置。              |
+| [OPEN](12.open-oracle.md)            | 在指示的模式下打开 `LOB`（内部、外部或临时）。               |
+| [READ](13.read-oracle.md)            | 从指定偏移量开始读取 `LOB` 的数据。                    |
+| [SUBSTR](14.substr-oracle.md)          | 从指定的偏移量开始返回部分 `LOB` 值。                   |
+| [TRIM](15.trim-oracle.md)            | 将 `LOB` 值修剪为指定的较短长度。                     |
+| [WRITE](16.write-oracle.md)           | 从指定的偏移量开始将数据写入 `LOB`。                    |
+| [WRITEAPPEND](17.writeappend-oracle.md)     | 将缓冲区写入 `LOB` 的末尾。                        |
 
 
 
