--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/13.DBMS_RANDOM/1.dbms_random-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/13.DBMS_RANDOM/1.dbms_random-overview.md
@@ -37,13 +37,13 @@ DBMS_RANDOM 子程序概览
 
 |                          **子程序**                          |                                        **描述**                                        |
 |-----------------------------------------------------------|--------------------------------------------------------------------------------------|
-| [INITIALIZE](../13.DBMS_RANDOM/2.INITIALIZE.md) | 使用种子值进行包的初始化。                                                                        |
-| [NORMAL](../13.DBMS_RANDOM/3.NORMAL.md)     | 返回正态分布的随机码。                                                                          |
-| [RANDOM](../13.DBMS_RANDOM/4.RANDOM.md)     | 生成一个随机数。                                                                             |
-| [SEED](../13.DBMS_RANDOM/5.SEED.md)       | 重置种子。                                                                                |
-| [STRING](../13.DBMS_RANDOM/6.STRING.md)     | 获取随机字符串。                                                                             |
-| [TERMINATE](../13.DBMS_RANDOM/7.TERMINATE.md)  | 终止包。                                                                                 |
-| [VALUE](../13.DBMS_RANDOM/8.VALUE.md)      | 此函数获取一个大于或等于 0 且小于 1 的随机数，小数点右侧有 38 位数字（38 位精度），而重载函数获取一个随机数 x，其中 x 大于或等于最小值，且小于最大值。 |
+| [INITIALIZE](2.initialize-random-oracle.md) | 使用种子值进行包的初始化。                                                                        |
+| [NORMAL](3.normal-oracle.md)     | 返回正态分布的随机码。                                                                          |
+| [RANDOM](4.random-oracle.md)     | 生成一个随机数。                                                                             |
+| [SEED](5.seed-oracle.md)       | 重置种子。                                                                                |
+| [STRING](6.string-oracle.md)     | 获取随机字符串。                                                                             |
+| [TERMINATE](7.terminate-oracle.md)  | 终止包。                                                                                 |
+| [VALUE](8.value-oracle.md)      | 此函数获取一个大于或等于 0 且小于 1 的随机数，小数点右侧有 38 位数字（38 位精度），而重载函数获取一个随机数 x，其中 x 大于或等于最小值，且小于最大值。 |
 
 
 
