--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/2.DBMS_AUDIT_MGMT/1.dbms_audit_mgmt-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/2.DBMS_AUDIT_MGMT/1.dbms_audit_mgmt-overview.md
@@ -33,10 +33,10 @@
 
 |                                    子程序                                    |               描述               |
 |---------------------------------------------------------------------------|------------------------------------|
-| [CLEAN_AUDIT_TRAIL](../2.DBMS_AUDIT_MGMT/2.CLEAN_AUDIT_TRAIL.md)          | 删除已归档的审计跟踪记录或文件。                   |
-| [CREATE_PURGE_JOB](../2.DBMS_AUDIT_MGMT/3.CREATE_PURGE_JOB.md)           | 创建清除作业以定期删除审计跟踪记录或文件。              |
-| [DROP_PURGE_JOB](../2.DBMS_AUDIT_MGMT/4.DROP_PURGE_JOB.md)             | 删除使用 `CREATE_PURGE_JOB` 过程创建的清除作业。 |
-| [SET_LAST_ARCHIVE_TIMESTAMP](../2.DBMS_AUDIT_MGMT/5.SET_LAST_ARCHIVE_TIMESTAMP.md) | 设置一个时间戳，指示审计记录或文件上次归档的时间。          |
-| [SET_PURGE_JOB_STATUS](../2.DBMS_AUDIT_MGMT/6.SET_PURGE_JOB_STATUS.md)       | 启用或禁用指定的清除作业。                      |
+| [CLEAN_AUDIT_TRAIL](2.clean-audit-trail-oracle.md)          | 删除已归档的审计跟踪记录或文件。                   |
+| [CREATE_PURGE_JOB](3.create-purge-job-oracle.md)           | 创建清除作业以定期删除审计跟踪记录或文件。              |
+| [DROP_PURGE_JOB](4.drop-purge-job-oracle.md)             | 删除使用 `CREATE_PURGE_JOB` 过程创建的清除作业。 |
+| [SET_LAST_ARCHIVE_TIMESTAMP](5.set-last-archive-timestamp-oracle.md) | 设置一个时间戳，指示审计记录或文件上次归档的时间。          |
+| [SET_PURGE_JOB_STATUS](6.set-purge-job-status-oracle.md)       | 启用或禁用指定的清除作业。                      |
 
 
