--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/6.DBMS_DESCRIBE/1.dbms_describe-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/6.DBMS_DESCRIBE/1.dbms_describe-overview.md
@@ -58,6 +58,6 @@ DBMS_DESCRIBE 子程序概览
 
 |                                子程序                                |        描述        |
 |-------------------------------------------------------------------|------------------|
-| [DESCRIBE_PROCEDURE](../6.DBMS_DESCRIBE/2.DESCRIBE_PROCEDURE.md) | 提供 PL 存储过程的简要说明。 |
+| [DESCRIBE_PROCEDURE](2.describe-procedure-oracle.md) | 提供 PL 存储过程的简要说明。 |
 
 
