--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/9.DBMS_LOCK/1.dbms_lock-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/9.DBMS_LOCK/1.dbms_lock-overview.md
@@ -23,7 +23,7 @@ DBMS_LOCK 子程序概览
 
 |                       **子程序**                        |    **描述**     |
 |------------------------------------------------------|---------------|
-| [SLEEP](../9.DBMS_LOCK/2.SLEEP.md) | 阻塞当前会话到指定的时长。 |
+| [SLEEP](2.sleep-oracle.md) | 阻塞当前会话到指定的时长。 |
 
 
 
